--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 
-
-    /* Navigation bar specifications*/
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+   
+/* Navigation bar specifications*/
     nav {
         display: flex;
         justify-content: space-between;
