--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
    */
 
-   
+
 /* Navigation bar specifications*/
     nav {
         display: flex;
@@ -43,7 +43,7 @@
             }
             .image {
                 margin: 30px;
-                width: 250px;
+                width: auto;
                 height: 350px;
                 object-fit: cover;
                 border: 8px solid white;
