--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
                 border: 8px solid white;
                 border-radius: 20px;
                 box-sizing: border-box; 
-
+                box-shadow: 0 0 20px rgba(0,0,0,.5);
                 object-fit: cover; 
                 transition: all 0.3s ease;
             }
